Fix text wrappiong on product order URL buttons

--- a/css/style.css
+++ b/css/style.css
@@ -10499,6 +10499,7 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   background: #02426f;
   font-size: 14px;
   line-height: 20px;
+  white-space: normal;
 }
 .content-region .block-views .block-panel div.views-field.views-field-field-order-url ul li a:empty,
 .sidebar-1-region .block-views .block-panel div.views-field.views-field-field-order-url ul li a:empty,
