--- a/less/content.less
+++ b/less/content.less
@@ -399,6 +399,7 @@
 				        background: @brand-primary;
 				        font-size: @font-size-base;
 				        line-height: @line-height-computed;
+				        white-space: normal;
 				      }
 				    }
 				  }
